--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+.full-navbar {
+  display: flex;
+  justify-content: space-evenly;
+}
+
 .navbar-image {
   height: 50px;
   width: 50px;
@@ -19,9 +24,22 @@ body {
   background-color: rgb(14, 165, 21);
 }
 
+.welcome-bat {
+  display: flex;
+  align-items: center;
+}
+
 .navbar-title {
   color: rgb(14, 165, 21);
   font-size: 2rem;
+}
+
+.welcome-image {
+  margin-left: 15px;
+}
+
+.welcome-image:hover {
+  transform: scale(1.05);
 }
 
 .modal-content {
